# python-package-learn

./: .gitignore  README.md  TODO.md
src/Async/asyncio/: README.md  callback.py  queue.py
src/Automation/autoit/: test.py
src/Automation/beautifulsoup/: contents.py  decompose.py  find.py  get_text.py  prettify.py  replace_with.py  unwrap.py
src/Automation/hrequests/: test.py
src/Automation/mechanicalsoup/: test.py
src/Automation/playwright/: README.md
src/Automation/pyotp/: genrate_key.py  hotp.py  totp.py
src/Automation/selenium/: README.md
src/Automation/uiautomator2/: README.md
src/CLI/tqdm/: cpu-ram.py  test.py
src/Compiler/auto-py-to-exe/: README.md
src/Compiler/nuitka/: README.md
src/Compiler/pyinstaller/: README.md
src/Database/csv/: oops.py  test.csv  test.py
src/Database/openpyxl/: test.py  test.xlsx
src/Database/pandas/: excel.py  test.py
src/DateTime/datetime/: expired.py  timeleft.py  timestamp.py
src/DateTime/isodate/: duration.py
src/Documentation/sphinx/: README.md
src/Downloader/yt-dlp/: test-pyside6.py  test.py  test2.py
src/GUI/plyer/: test.py
src/GUI/pyside6/: .gitignore  README.md
src/GUI/ttkbootstrap/: README.md
src/Google/spreadsheet/: test.py
src/Hashing/aes/: aes-base64.py  aes.py
src/Hashing/encryption-to-php/: enc.php  enc.py
src/Hashing/python-minifier/: test.py
src/Hashing/tls-encryption/: test.py
src/Image/pillow/: test.py
src/License/: README.md
src/Linting/flake8/: README.md
src/Log/logging/: basicConfig.py  capture.py  (+2 more)
src/Virtual Environment/poetry/test/: pyproject.toml  test.py
(+229 files in other folders)
