[tool.poetry]
name = "seleniumbase-env"
version = "0.1.0"
description = ""
authors = ["irfanykywz <irfanyouth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
seleniumbase = "^4.22.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
